refactor: change with_items to loops

--- a/roles/settings/defaults/main.yml
+++ b/roles/settings/defaults/main.yml
@@ -29,3 +29,7 @@ trackpad_tap_to_click: null
 dock_make_hidden_apps_translucent: null
 dock_show_indicator_lights_for_open_apps: null
 dock_tilesize: null
+
+# Ssh
+configure_ssh: false
+ssh_keys: []
