--- a/roles/settings/tasks/trackpad_tap_to_click.yml
+++ b/roles/settings/tasks/trackpad_tap_to_click.yml
@@ -6,7 +6,7 @@
     key: "{{ item.key }}"
     type: "{{ item.type }}"
     value: "{{ item.value }}"
-  with_items:
+  loop:
     - host: currentHost
       domain: NSGlobalDomain
       key: com.apple.mouse.tapBehavior
