--- a/roles/settings/tasks/ssh.yml
+++ b/roles/settings/tasks/ssh.yml
@@ -10,7 +10,7 @@
     path: "{{ ansible_env.HOME }}/.ssh/{{item.name}}"
     type: "{{ item.type | default('ed25519')}}"
     comment: "{{ item.comment | default(omit)}}"
-  with_items: "{{ ssh_keys }}"
+  loop: "{{ ssh_keys }}"
 
 - name: Configure the users ssh config file
   template:
@@ -24,5 +24,5 @@
 
 - name: Add ssh private keys to ssh agent
   shell: "ssh-add -K {{ ansible_env.HOME }}/.ssh/{{item.name}}"
-  with_items: "{{ ssh_keys }}"
+  loop: "{{ ssh_keys }}"
   changed_when: false
