--- a/roles/settings/tasks/transmission.yml
+++ b/roles/settings/tasks/transmission.yml
@@ -12,7 +12,7 @@
     key: "{{ item.key }}"
     type: bool
     value: "{{ item.value }}"
-  with_items:
+  loop:
     - { name: "Keep incomplete downloads", key: "UseIncompleteDownloadFolder", value: "true" }
     - { name: "Don't prompt for confirmation before downloading (1/2)", key: "DownloadAsk", value: "false" }
     - { name: "Don't prompt for confirmation before downloading (2/2)", key: "MagnetOpenAsk", value: "false" }
@@ -28,7 +28,7 @@
     key: "{{ item.key }}"
     type: string
     value: "{{ item.value }}"
-  with_items:
+  loop:
     - {
         name: "Set path for incomplete downloads",
         key: "IncompleteDownloadFolder",
