--- a/roles/settings/tasks/safari.yml
+++ b/roles/settings/tasks/safari.yml
@@ -5,7 +5,7 @@
     domain: "{{ safari_defaults_domain }}"
     key: ShowFullURLInSmartSearchField
     type: bool
-    value: "{{ safari_show_full_url_in_address_bar }}"
+    value: "{{ safari_show_full_url_in_address_bar | bool }}"
   notify: Restart Safari
 
 - name: "Open 'safe' files automatically ({{ open_safe_files_automatically }})"
@@ -14,7 +14,7 @@
     domain: "{{ safari_defaults_domain }}"
     key: AutoOpenSafeDownloads
     type: bool
-    value: "{{ safari_open_safe_files_automatically }}"
+    value: "{{ safari_open_safe_files_automatically | bool }}"
   notify: Restart Safari
 
 - name: "Show status bar ({{ show_status_bar }})"
@@ -23,14 +23,13 @@
     domain: "{{ safari_defaults_domain }}"
     key: ShowOverlayStatusBar
     type: bool
-    value: "{{ safari_show_status_bar }}"
+    value: "{{ safari_show_status_bar | bool }}"
   notify: Restart Safari
-
-- name: "Show developer menu ({{ show_developer_menu }})"
-  when: safari_show_developer_menu != None
-  osx_defaults:
-    domain: "{{ safari_defaults_domain }}"
-    key: IncludeDevelopMenu
-    type: bool
-    value: "{{ safari_show_developer_menu|bool }}"
-  notify: Restart Safari
+# - name: "Show developer menu ({{ show_developer_menu }})"
+#   when: safari_show_developer_menu != None
+#   osx_defaults:
+#     domain: "{{ safari_defaults_domain }}"
+#     key: IncludeDevelopMenu
+#     type: bool
+#     value: "{{ safari_show_developer_menu | bool }}"
+#   notify: Restart Safari
