--- a/tests/config.yml
+++ b/tests/config.yml
@@ -8,34 +8,34 @@ hostname: null
 # finder_proxy_icon_hover_delay: null
 
 # Safari
-safari_show_full_url_in_address_bar: yes
-safari_open_safe_files_automatically: no
-safari_show_status_bar: yes
-safari_show_developer_menu: yes
+safari_show_full_url_in_address_bar: true
+safari_open_safe_files_automatically: true
+safari_show_status_bar: true
+safari_show_developer_menu: true
 
 # System
-system_save_application_state_on_quit: no
-system_expand_save_panel_by_default: yes
-system_expand_print_panel_by_default: yes
-system_show_file_extensions_warning: no
-system_warn_before_emptying_the_trash: yes
-system_use_f_keys_as_standard_function_keys: null
-system_index_network_storage_with_spotlight: no
+system_save_application_state_on_quit: true
+system_expand_save_panel_by_default: true
+system_expand_print_panel_by_default: true
+system_show_file_extensions_warning: true
+system_warn_before_emptying_the_trash: true
+system_use_f_keys_as_standard_function_keys: true
+system_index_network_storage_with_spotlight: true
 
 # Screen
 screensaver_ask_for_password: true
 screensaver_ask_for_password_in_seconds: 5
+
+# Trackpad
+trackpad_tap_to_click: true
 
 # Dock
 dock_make_hidden_apps_translucent: true
 dock_show_indicator_lights_for_open_apps: true
 dock_tilesize: 40
 
-# Trackpad
-trackpad_tap_to_click: true
-
-# Ssh
-configure_ssh: no
+# Ssh
+configure_ssh: false
 ssh_keys: []
 
 ####################################################################
@@ -47,7 +47,7 @@ homebrew_taps:
 homebrew_apps:
   - font-cascadia-code
   - google-chrome
-  - transmission
+  - visual-studio-code
 
 homebrew_packages:
   - git
