--- a/default.config.yml
+++ b/default.config.yml
@@ -9,19 +9,19 @@ hostname: null
 # finder_proxy_icon_hover_delay: null
 
 # Safari
-safari_show_full_url_in_address_bar: yes
-safari_open_safe_files_automatically: no
-safari_show_status_bar: yes
-safari_show_developer_menu: yes
+safari_show_full_url_in_address_bar: true
+safari_open_safe_files_automatically: false
+safari_show_status_bar: true
+safari_show_developer_menu: true
 
 # System
-system_save_application_state_on_quit: no
-system_expand_save_panel_by_default: yes
-system_expand_print_panel_by_default: yes
-system_show_file_extensions_warning: no
-system_warn_before_emptying_the_trash: yes
+system_save_application_state_on_quit: false
+system_expand_save_panel_by_default: true
+system_expand_print_panel_by_default: true
+system_show_file_extensions_warning: false
+system_warn_before_emptying_the_trash: true
 system_use_f_keys_as_standard_function_keys: null
-system_index_network_storage_with_spotlight: no
+system_index_network_storage_with_spotlight: false
 
 # Screen
 screensaver_ask_for_password: true
@@ -36,7 +36,7 @@ dock_tilesize: 40
 trackpad_tap_to_click: true
 
 # Ssh
-configure_ssh: yes
+configure_ssh: true
 ssh_keys:
   []
   # - name: "example"
@@ -72,7 +72,7 @@ homebrew_apps:
   - docker
   # - dropbox
   # - figma
-  - font-cascadia
+  - font-cascadia-code
   - font-jetbrains-mono
   - google-chrome
   - gpg-suite
@@ -161,7 +161,7 @@ npm_packages:
 ####################################################################
 ### Role: dotfiles
 
-configure_dotfiles: yes
+configure_dotfiles: true
 dotfiles_repo: https://github.com/gperdomor/dotfiles.git
 dotfiles_repo_version: master
 dotfiles_repo_accept_hostkey: false
