--- a/roles/settings/tasks/hostname.yml
+++ b/roles/settings/tasks/hostname.yml
@@ -7,7 +7,7 @@
   when: computername != None
 
 - name: Update ComputerName
-  shell: scutil --set ComputerName {{ computername }}
+  shell: scutil --set ComputerName "{{ computername }}"
   become: true
   when: computername != None and (computername not in computername_result.stdout)
 
