--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -92,25 +92,28 @@
         name: asdf
         state: present
 
-    - name: Checking asdf plugins
-      shell: asdf plugin list
-      register: plugins_list
-      changed_when: false
-      check_mode: false
-      ignore_errors: true
+    - name: Install default node version.
+      command: >
+        asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git
+      register: plugin_response
+      changed_when: "'Plugin named nodejs already added' not in plugin_response.stderr"
 
-    - name: Adding ASDF plugin for nodejs
-      command: asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git
-      when: "'nodejs' not in plugins_list.stdout"
-
-    - name: Install default node version
-      command: asdf install nodejs {{ node_version }}
+    - name: Install default node version.
+      command: >
+        asdf install nodejs {{ node_version }}
       register: node_version_response
-      check_mode: false
-      changed_when: "'is already installed' not in node_version_response.stdout"
+      changed_when: "'Version already installed' not in node_version_response.stderr"
 
     - name: Make Node {{ node_version }} as default.
-      command: asdf global nodejs {{ node_version }}
+      command: >
+        asdf global nodejs {{ node_version }}
+      changed_when: false
+
+    - name: List installed npm packages.
+      command: >
+        npm -g list --depth=0
+      register: npm_list
+      check_mode: false
       changed_when: false
 
     - name: Install global NPM packages.
@@ -119,5 +122,5 @@
         state: "{{ item.state | default('present') }}"
         version: "{{ item.version | default(omit) }}"
         global: true
-        executable: "{{ ansible_env.HOME }}/.asdf/shims/npm"
+        executable: "{{ item.executable | default(omit) }}"
       loop: "{{ npm_packages }}"
