--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Python 3.
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: "3.10"
 
       - name: Install test dependencies.
         run: pip3 install yamllint ansible ansible-lint
@@ -36,18 +36,18 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: "3.10"
 
       - name: Uninstall GitHub Actions' built-in browser installs.
         run: |
           sudo rm -rf /Applications/Firefox.app
           sudo rm -rf /Applications/Google\ Chrome.app
 
-      - name: Install dependencies
-        run: brew install ansible
+      - name: Install test dependencies.
+        run: sudo pip3 install ansible
 
       - name: Set up the test environment.
         run: |
@@ -55,9 +55,6 @@ jobs:
           cp tests/inventory.yml ./inventory.yml
           cp tests/config.yml ./config.yml
           ansible-galaxy install -r requirements.yml
-
-      - name: Checking the playbook's syntax
-        run: ansible-playbook main.yml -i inventory.yml --syntax-check
 
       - name: Test the playbook's syntax.
         run: ansible-playbook main.yml -i inventory.yml --syntax-check
