--- a/requirements.yml
+++ b/requirements.yml
@@ -1,2 +1,7 @@
 ---
-- name: geerlingguy.dotfiles
+roles:
+  - name: elliotweiser.osx-command-line-tools
+  - name: geerlingguy.dotfiles
+
+collections:
+  - name: geerlingguy.mac
