--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,6 @@
 [defaults]
-roles_path = roles
-retry_files_save_path = .ansible
-
-[privilege_escalation]
-become_ask_pass = True
-
-[ssh_connection]
-pipelining = True
-control_path = /tmp/ansible-ssh-%%h-%%p-%%r
+nocows = True
+roles_path = ./roles:/etc/ansible/roles
+inventory = inventory.yml
+become = true
+stdout_callback = yaml
