--- a/roles/node/defaults/main.yml
+++ b/roles/node/defaults/main.yml
@@ -1,9 +1,5 @@
 ---
-
-node_manager: volta
-
-nvm_version: 0.38.0
-
-node_version: 16
-
+node_version: 18.11.0
+node_manager: fnm
+nvm_version: 0.39.2
 npm_packages: []
