--- a/roles/projects/defaults/main.yml
+++ b/roles/projects/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 projects:
-  - dest: "personal/macOS-ansible"
+  - dest: "macOS-ansible"
     repo_https: "https://github.com/gperdomor/macOS-ansible.git"
     repo_ssh: "git@github.com:gperdomor/macOS-ansible.git"
     version: main
